# MacM4LocalAgent

./: .gitignore  CHANGELOG.md  MacM4LocalAgent.code-workspace  Makefile  README.md  pyproject.toml
claude_proxy/: __init__.py  server.py
compare/: ab.py
config/: backend-registry.yaml  detected.env  detected.env.example  litellm-config.rendered.yaml  litellm-config.yaml
cost/: pricing.py  schema.sql
dashboard/: app.py  monitor.py
docs/: CLAUDE-CODE-INTEGRATION.md  README.md  RUNBOOK-cline-setup.md  RUNBOOK-cursor-setup.md  benchmarks.md  macm4-lifecycle-and-context-plan.md  offline-mode.md  routing.md  testing.md  turboquant.md
launchd/: com.local.claude-proxy.plist  com.local.dashboard.rendered.plist  com.local.litellm.plist  com.local.litellm.rendered.plist  com.local.mlx.rendered.plist  com.local.ollama.rendered.plist  com.local.turbo-256k.plist  com.local.turbo-512k.plist
router/: backend_lifecycle.py  backend_registry.py  complexity_classifier.py  context_compression.py  overgeneration_control.py  pending_requests.py  route_by_size.py  status_api.py
scripts/: 00-detect.sh  40-litellm.sh  50-cursor.sh  60-dashboard.sh  90-verify.sh  analyze_cline_dumps.py  check-downloads.sh  download-ollama-from-hf.sh  install-cline.sh  install-worktree-sync.sh  perf-suite.sh  replay_cline_turn.py  run_litellm.py  setup-anthropic-key.sh  turbo-install.sh  turbo-status.sh  upgrade-to-q8.sh  workspace-sync.py
tests/: run.sh  test_apikey_escalation.py  test_backend_lifecycle.py  test_backend_registry.py  test_claude_proxy.py  test_compare.py  test_context_compression.py  (+16 more)
(+11 files in other folders)
