[project]
name = "macm4localagent"
version = "0.1.0"
description = "Hybrid local + Claude coding setup for Apple Silicon (M4/M5 Max)."
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
runtime = [
  "litellm[proxy]>=1.50",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "anthropic>=0.40",
  "tiktoken>=0.7",
  "pyyaml>=6.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --color=yes"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [".venvs", "models", ".build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
